fix: silence slf4j and unsafe memory access warnings